--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -19,13 +19,25 @@ wildcard_imports = "deny"
 [dependencies]
 rinf = "8.9.0"
 serde = { version = "1.0.219", features = ["derive"] }
-tokio = { version = "1.45.0", features = ["rt", "macros", "time", "sync", "fs"] }
+tokio = { version = "1.45.0", features = [
+  "rt",
+  "macros",
+  "time",
+  "sync",
+  "fs",
+] }
 async-trait = "0.1.87"
 messages = "0.3.1"
 serde_json = "1.0.149"
 anyhow = "1.0.101"
 walkdir = "2.5.0"
 epub = "2.1.5"
+rbook = "0.6.10"
+epub-parser = "0.3.4"
+regex = "1.12.3"
+image = "0.25.9"
+fast_image_resize = { version = "6.0.0", features = ["image"] }
+rayon = "1.11.0"
 
 # Uncomment below to target the web.
 # tokio_with_wasm = { version = "0.8.5", features = ["rt", "macros", "time"] }
